# ChangeLog for sci-geosciences/grass
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/grass/ChangeLog,v 1.101 2011/04/19 17:22:25 scarabeus Exp $

  19 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> grass-6.4.1.ebuild:
  Fix patch name. Per bug #364049. This is the reason why conditional patches
  are stupid.

*grass-6.4.1 (14 Apr 2011)

  14 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> +grass-6.4.1.ebuild:
  Version bump to latest. (only compilation tested now)

  10 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  grass-6.3.0.ebuild:
  Fix deprecation warning.

  05 Apr 2011; Justin Lecher <jlec@gentoo.org> grass-6.4.0.ebuild:
  Cleaned double /

  26 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> grass-6.3.0.ebuild,
  grass-6.4.0.ebuild:
  Depend on virtual/ffmpeg instead of media-video/ffmpeg. Cleanup the
  deprecated if has_version for old ffmpeg.

  24 Mar 2011; Ryan Hill <dirtyepic@gentoo.org> grass-6.4.0.ebuild:
  eselect wxwidgets affects build behaviour, not runtime, and only outside of
  portage so it has no use here. Use 'unicode' wx libs since 'base' means non-X
  only. Don't use \ inside of quotes.

  10 Mar 2011; Justin Lecher <jlec@gentoo.org> grass-6.3.0.ebuild,
  grass-6.4.0.ebuild, metadata.xml:
  Remove largefile USE support and default to it

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> grass-6.3.0.ebuild,
  grass-6.4.0.ebuild:
  Drop sparc keywords

  20 Feb 2011; Steve Arnold <nerdboy@gentoo.org> grass-6.4.0.ebuild:
  Migrating to requested mysql virtual: dev-db/mysql -> virtual/mysql

  08 Nov 2010; Kacper Kowalik <xarthisius@gentoo.org> grass-6.3.0.ebuild,
  grass-6.4.0.ebuild:
  media-libs/jpeg -> virtual/jpeg

  10 Oct 2010; Ulrich Mueller <ulm@gentoo.org> grass-6.3.0.ebuild,
  grass-6.4.0.ebuild:
  Fix openmotif dependency.

  05 Sep 2010; Ryan Hill <dirtyepic@gentoo.org> grass-6.3.0.ebuild:
  s/wxwindows/wxwidgets
