@@ -1,6 +1,10 @@
 # ChangeLog for sci-geosciences/grass
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/grass/ChangeLog,v 1.101 2011/04/19 17:22:25 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/grass/ChangeLog,v 1.102 2011/06/11 14:13:15 scarabeus Exp $
+
+  11 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> -grass-6.4.0.ebuild,
+  grass-6.4.1.ebuild:
+  Grass is quite happy to use any tiff version that gdal suplies.
 
   19 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> grass-6.4.1.ebuild:
   Fix patch name. Per bug #364049. This is the reason why conditional patches
